adjusted the app bar of the expanded menu to contrast with the main header made the labels for the layer ellipse correctly

--- a/src/components/LayerList.scss
+++ b/src/components/LayerList.scss
@@ -21,6 +21,12 @@
       &.down {}
       &.up {}
     }
+    .layer-list-name {
+      overflow: hidden;
+      width: 170px;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
   }
   .viz {
     &.closed {
